--- a/responsive.css
+++ b/responsive.css
@@ -1,20 +1,51 @@
-@media (max-width: 768px){
-    .nav{
+@media (min-width: 1600px){
+    .container{
+        width: 100%;
+        padding: 0 10px;
+
+    }
+}
+
+@media (max-width: 1279px){
+    .container{
+        width: 95%;
+        padding: 0 10px;
+
+    }
+}
+
+
+@media (max-width: 991px){
+    .container{
+        width: 95%;
+        padding: 0 10px;
+
+    }
+    /* bannar part  */
+    .logo img{
+    width: 500px;
+    height: auto;
+   
+}
+/* 4th part  */ 
+.done{
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    text-align: center;
-    margin-top: 50px;
     
+    align-items: center;
 }
-.logo{
-    margin: 0 auto;
 }
-.ulo{
-   display: flex;
-    flex-direction: column;
-    gap: 25px;
-}
+
+    
+
+@media (max-width: 768px){
+    /* nav part  */
+    .container{
+        width: 92%;
+        padding: 0 10px;
+
+    }
+
 /* banna part  */
   .bannar{
     display: flex;
@@ -51,69 +82,8 @@
 
 
 
-
-
-@media (max-width: 576px) {
-.nav{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 50px;
-}
-.logo{
-    margin: 0 auto;
-}
-.ulo{
-   display: flex;
-    flex-direction: column;
-    gap: 25px;
-}
-/* bannar part  */
-.bannar{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 20px;
-    margin-top: 30px;
-}
-.logo img{
-    width: 400px;
-    height: auto;
-    margin: 0 auto; 
-}
-/* 3rd part  */
-.about p{
-    font-size: 30px;
-}
-/* 4th part  */ 
-.done{
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
-}
-/* 5th part  */
-.count{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-    gap: 50px;
-}
-/* footer part  */
-.last{
-   font-size: 30px;
-}
-}
-
-
-
-
-
 @media (max-width: 480px) {
- 
-.container{
+    .container{
         width: 90%;
         padding: 0 10px;
 
@@ -134,7 +104,6 @@
     cursor: pointer;
 }
 
-
 /* bannar part  */
 .bannar{
     display: flex;
@@ -150,6 +119,7 @@
     
      
 }
+
 /* 3rd part  */
 .about p{
     font-size: 20px;
@@ -160,6 +130,7 @@
     gap: 10px;
     align-items: center;
 }
+
 /* 4th part  */
 .four{
     font-size: 25px;
@@ -175,6 +146,7 @@
     width: 220px;
     height: 150px;
 }
+
 /* 5th part  */
 .count{
     display: flex;
